--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -9,6 +9,7 @@
 
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
+@import 'components/file-manager.less';
 @import 'components/main-menu.less';
 @import 'components/multiple-region-selector.less';
 
