--- a/resources/less/page-place-ad.less
+++ b/resources/less/page-place-ad.less
@@ -21,6 +21,7 @@
 
     .upload-field-actions {
         padding-bottom: 5px;
+        margin-bottom: 0;
 
         li {
             background: transparent;
