Improved Search Ads widget appearance (#849).

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -12,6 +12,7 @@
 @import 'components/file-manager.less';
 @import 'components/main-menu.less';
 @import 'components/multiple-region-selector.less';
+@import 'components/search-listings-widget.less';
 
 @import 'page-place-ad.less';
 @import 'page-show-ad.less';
