--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1393,24 +1393,31 @@ p.ad_status_msg {
 .awpcp-multiple-region-selector .add-region {
   margin-left: 10px;
 }
-#classiwrapper > ul,
-.awpcp-multiple-region-selector > ul,
-#classiwrapper .awpcp-region-selector-partials,
-.awpcp-multiple-region-selector .awpcp-region-selector-partials {
+#classiwrapper ul,
+.awpcp-multiple-region-selector ul {
   margin: 0;
   padding: 0;
+}
+#classiwrapper ul li,
+.awpcp-multiple-region-selector ul li {
+  list-style-type: none;
+  list-style-image: none;
 }
 #classiwrapper .awpcp-region-selector,
 .awpcp-multiple-region-selector .awpcp-region-selector {
   background: rgba(0, 0, 0, 0.02);
-  list-style-type: none;
+  margin-left: 0;
   margin-bottom: 5px;
   padding: 4px 0px;
+}
+#classiwrapper .awpcp-region-selector .awpcp-region-selector-partials,
+.awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partials {
+  padding: 2px;
 }
 #classiwrapper .awpcp-region-selector .awpcp-region-selector-partial,
 .awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partial {
   list-style-type: none;
-  margin-bottom: 2px;
+  margin: 0;
 }
 #classiwrapper .awpcp-region-selector .awpcp-region-selector-partial label,
 .awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partial label {
@@ -1426,6 +1433,42 @@ p.ad_status_msg {
 #classiwrapper .awpcp-region-selector:last-of-type,
 .awpcp-multiple-region-selector .awpcp-region-selector:last-of-type {
   margin-bottom: 0;
+}
+.widget_awpcp_search_widget label {
+  display: block;
+  font-size: 13px;
+  font-size: 0.9rem;
+  line-height: 1.2rem;
+  margin: 1px 0;
+  text-align: left;
+}
+.widget_awpcp_search_widget input,
+.widget_awpcp_search_widget select {
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;
+  /* Firefox, other Gecko */
+  box-sizing: border-box;
+  /* Opera/IE 8+ */
+  margin: 0;
+  width: 100%;
+}
+.widget_awpcp_search_widget .awpcp-multiple-region-selector,
+.widget_awpcp_search_widget .awpcp-multiple-region-selector .awpcp-region-selector-partials,
+.widget_awpcp_search_widget .awpcp-multiple-region-selector .awpcp-region-selector-partials label {
+  padding: 0;
+}
+.widget_awpcp_search_widget .awpcp-multiple-region-selector .awpcp-region-selector {
+  background: none;
+}
+.widget_awpcp_search_widget .awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partials {
+  margin: 0;
+}
+.widget_awpcp_search_widget .awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partials label {
+  margin-right: 0;
+}
+.widget_awpcp_search_widget .submit {
+  margin-top: 10px;
 }
 /* Upload Images Step */
 #classiwrapper .upload-conditions,
