Remove image box-shadow for thumbnails in File Manager screens.

--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1058,6 +1058,8 @@ p.ad_status_msg {
 .uploaded-images li .image-container img,
 #classiwrapper .awpcp-uploaded-images li .image-container img,
 .awpcp-uploaded-images li .image-container img {
+  border-radius: 0;
+  box-shadow: none;
   display: block;
   margin: 0 auto;
 }
