--- a/resources/less/components/file-manager.less
+++ b/resources/less/components/file-manager.less
@@ -17,6 +17,8 @@
             background: #E2E2E2;
 
             img {
+                border-radius: 0;
+                box-shadow: none;
                 display: block;
                 margin: 0 auto;
             }
