--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -10,6 +10,7 @@
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
 @import 'components/file-manager.less';
+@import 'components/listings-widget.less';
 @import 'components/main-menu.less';
 @import 'components/multiple-region-selector.less';
 @import 'components/search-listings-widget.less';
