Fix appearance of Search Ads widget in Responsive theme (#849).
http://wordpress.org/themes/responsive

--- a/resources/less/components/multiple-region-selector.less
+++ b/resources/less/components/multiple-region-selector.less
@@ -12,7 +12,7 @@
 #classiwrapper, .awpcp-multiple-region-selector {
     ul {
         margin: 0;
-        padding: 0;
+        padding: 0 !important;
 
         li {
             list-style-type: none;
