Fix handler for Delete action. Regions were being deleted, even if they had sub-regions.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -75,7 +75,6 @@
     padding: 5px;
 }
 
-
 /* Admin Panel
  ---------------------------------------------------------------------------- */
 
@@ -192,6 +191,30 @@
 .metabox-holder {
     .postbox .inside {
         padding: 5px 12px !important;
+    }
+}
+
+.awpcp-admin-page {
+    div.awpcp-ajax-error {
+        margin: 0.5em;
+        padding: 10px;
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
+
+/* Admin Sidebar */
+
+.awpcp-postbox-container {
+    .postbox {
+        min-width: 200px;
+
+        .hndle, .hndle1 {
+            cursor: default;
+        }
     }
 }
 
