--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -59,8 +59,9 @@
 
 .nav-tab-wrapper {
     .nav-tab {
-        font-size: 12px;
+        font-size: 11px;
         padding: 2px 5px;
+        margin-right: -3px;
     }
 }
 
@@ -252,6 +253,27 @@
     .awpcp-main-content {
         .metabox-holder {
             padding-top: 20px !important;
+        }
+    }
+
+    .category-checklist {
+        height: 290px;
+        max-height: 290px;
+
+        .awpcp-categories-list  {
+            margin-top: 4px;
+
+            li {
+                margin-bottom: 4px;
+            }
+
+            ul {
+                margin-left: 20px;
+
+                li:first-child {
+                    margin-top: 4px;
+                }
+            }
         }
     }
 }
