--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -278,6 +278,16 @@
     }
 }
 
+.awpcp-license-settings {
+    .form-table th {
+        width: 250px;
+    }
+
+    .awpcp-license-valid {
+        color: green;
+    }
+}
+
 /* =Admin Credit Plans
 ---------------------------------------------------------------------------- */
 
