--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -229,10 +229,10 @@
 .awpcp-admin-settings .category-checklist .awpcp-categories-list ul li:first-child {
   margin-top: 4px;
 }
-.awpcp-license-settings .form-table th {
+.awpcp-licenses-settings .form-table th {
   width: 250px;
 }
-.awpcp-license-settings .awpcp-license-valid {
+.awpcp-licenses-settings .awpcp-license-valid {
   color: green;
 }
 /* =Admin Credit Plans
