--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -169,37 +169,8 @@
   float: left;
   width: 43%;
 }
-/* Admin Sidebar */
-.awpcp-postbox-container .postbox {
-  min-width: 200px;
-}
-.awpcp-postbox-container .postbox .hndle,
-.awpcp-postbox-container .postbox .hndle1 {
-  cursor: default;
-}
-.li_link {
-  margin-left: 10px;
-}
-.inside {
-  padding: 5px 10px !important;
-}
-.apostboxes {
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  background-color: #FFFFFF;
-  border-color: #DFDFDF;
-  border-radius: 3px;
-  border-style: solid;
-  border-width: 1px;
-  line-height: 1;
-  margin-bottom: 20px;
-  /*min-width:255px;*/
-  position: relative;
-  width: 99.5%;
-}
-.apostboxes h3 {
-  background: url("../images/admin-sidebar-gray-grad.png") repeat-x scroll left top #dfdfdf;
-  text-shadow: 0 1px 0 #FFFFFF;
+.metabox-holder .postbox .inside {
+  padding: 5px 12px !important;
 }
 /* =Admin Settings
 ---------------------------------------------------------------------------- */
@@ -534,6 +505,18 @@
 }
 .align-text-right {
   text-align: right;
+}
+.awpcp-admin-sidebar .postbox {
+  min-width: 200px;
+}
+.awpcp-admin-sidebar .postbox .hndle {
+  cursor: default;
+}
+.awpcp-admin-sidebar .postbox .inside *:first-child {
+  margin-top: 0;
+}
+.awpcp-admin-sidebar .awpcp-get-a-premium-module .hndle {
+  border-bottom-color: #E9E9B2;
 }
 .progress-bar {
   border: 1px solid #AAA;
