--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -198,44 +198,11 @@
     width: 43%;
 }
 
-/* Admin Sidebar */
-
-.awpcp-postbox-container {
-    .postbox {
-        min-width: 200px;
-
-        .hndle, .hndle1 {
-            cursor: default;
-        }
+.metabox-holder {
+    .postbox .inside {
+        padding: 5px 12px !important;
     }
 }
-
-.li_link {
-    margin-left: 10px;
-}
-.inside {
-    padding: 5px 10px !important;
-}
-.apostboxes {
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-
-    background-color:#FFFFFF;
-    border-color:#DFDFDF;
-    border-radius: 3px;
-    border-style:solid;
-    border-width:1px;
-    line-height:1;
-    margin-bottom:20px;
-    /*min-width:255px;*/
-    position:relative;
-    width:99.5%;
-}
-.apostboxes h3 {
-    background: url("../images/admin-sidebar-gray-grad.png") repeat-x scroll left top #DFDFDF;
-    text-shadow: 0 1px 0 #FFFFFF;
-}
-
 
 /* =Admin Settings
 ---------------------------------------------------------------------------- */
