Reduce the padding between each setting row in Settings screen.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -223,6 +223,19 @@
         }
     }
 
+    .settings-form {
+        h3 {
+            margin-top: 2em;
+            margin-bottom: 0.7em;
+        }
+        .form-table {
+            th, td {
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+        }
+    }
+
     .category-checklist {
         height: 290px;
         max-height: 290px;
