--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -184,6 +184,15 @@
 .awpcp-admin-settings .awpcp-main-content .metabox-holder {
   padding-top: 20px !important;
 }
+.awpcp-admin-settings .settings-form h3 {
+  margin-top: 2em;
+  margin-bottom: 0.7em;
+}
+.awpcp-admin-settings .settings-form .form-table th,
+.awpcp-admin-settings .settings-form .form-table td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 .awpcp-admin-settings .category-checklist {
   height: 290px;
   max-height: 290px;
