Add MediaManager component to replace the FileManager component used in Place/Edit Ad page.

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -12,10 +12,10 @@
 
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
-@import 'components/file-manager.less';
 @import 'components/listings-widget.less';
 @import 'components/listing-actions.less';
 @import 'components/main-menu.less';
+@import 'components/media-manager.less';
 @import 'components/multiple-region-selector.less';
 @import 'components/multiple-region-selector-form-table.less';
 @import 'components/search-listings-widget.less';
