--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1125,6 +1125,9 @@ p.ad_status_msg {
   display: block;
   margin: 0 auto;
 }
+#classiwrapper .is-disabled .awpcp-uploaded-file-thumbnail-container img {
+  opacity: 0.5;
+}
 #classiwrapper .awpcp-uploaded-file-primary-label {
   position: absolute;
   bottom: -23px;
@@ -1158,7 +1161,10 @@ p.ad_status_msg {
 }
 #classiwrapper .awpcp-uploaded-file-action {
   float: left;
-  padding: 0 1px;
+  border: 1px solid #E2E2E2;
+  border-radius: 2px;
+  margin-right: 2px;
+  background: #FBFBFB;
 }
 #classiwrapper .awpcp-uploaded-file-action a,
 #classiwrapper .awpcp-uploaded-file-action label {
@@ -1169,9 +1175,16 @@ p.ad_status_msg {
   line-height: 22px;
   width: 25px;
 }
-#classiwrapper .awpcp-uploaded-file-action a:hover,
-#classiwrapper .awpcp-uploaded-file-action label:hover {
-  background-color: #C6C6C6;
+#classiwrapper .awpcp-uploaded-file-action:hover {
+  border-color: #B3B3B3;
+  background-color: #D8D8D8;
+}
+#classiwrapper .is-primary .awpcp-uploaded-file-action {
+  background: #ECF6EA;
+  border-color: #9BCE93;
+}
+#classiwrapper .is-primary .awpcp-uploaded-file-action:hover {
+  background: #A5D69D;
 }
 #classiwrapper .awpcp-uploaded-file-change-status-action label {
   padding: 0 4px;
@@ -1188,6 +1201,10 @@ p.ad_status_msg {
 }
 #classiwrapper .awpcp-uploaded-file-delete-action a {
   background-image: url(../images/image-delete.png);
+}
+#classiwrapper .awpcp-uploaded-file-loading-icon {
+  background: none !important;
+  border: none !important;
 }
 #classiwrapper .awpcp-spinner {
   background: url('/wp-admin/images/spinner.gif') center center no-repeat;
