--- a/resources/less/components/listings-widget.less
+++ b/resources/less/components/listings-widget.less
@@ -46,4 +46,20 @@
             margin-left: 10px !important;
         }
     }
+
+    .awpcp-listings-widget-item-with-left-thumbnail {
+        .awpcplatestthumb {
+            margin-right: 10px;
+            float: left;
+            width: 50%;
+        }
+    }
+
+    .awpcp-listings-widget-item-with-right-thumbnail {
+        .awpcplatestthumb {
+            margin-left: 10px;
+            float: right;
+            width: 50%;
+        }
+    }
 }
