--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -601,18 +601,42 @@ p.ad_status_msg {
 
 /* Attachments Style */
 
-#classiwrapper .awpcp-attachments {
-    clear: both;
-    margin-top: 10px;
-}
-#classiwrapper .awpcp-attachments-title {
-    font-weight: bold;
-}
-#classiwrapper .awpcp-attachments-list {
-    margin: 0;
-    padding: 0;
-}
-#classiwrapper .awpcp-attachments-list li {
-    list-style-type: circle;
-    list-style-position: inside;
+
+
+#classiwrapper {
+    .awpcp-videos {
+        clear: both;
+        margin-top: 10px;
+    }
+    .awpcp-videos-title {
+        font-weight: bold;
+    }
+    .awpcp-videos-list-item {
+        float: left;
+        list-style: none;
+        margin: 10px;
+
+        a {
+            background: #626262;
+            border: 1px solid #313131;
+            display: inline-block;
+            padding: 9px;
+        }
+    }
+
+    .awpcp-attachments {
+        clear: both;
+        margin-top: 10px;
+    }
+    .awpcp-attachments-title {
+        font-weight: bold;
+    }
+    .awpcp-attachments-list {
+        margin: 0;
+        padding: 0;
+    }
+    .awpcp-attachments-list li {
+        list-style-type: circle;
+        list-style-position: inside;
+    }
 }
