--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -601,8 +601,6 @@ p.ad_status_msg {
 
 /* Attachments Style */
 
-
-
 #classiwrapper {
     .awpcp-videos {
         clear: both;
@@ -611,7 +609,7 @@ p.ad_status_msg {
     .awpcp-videos-title {
         font-weight: bold;
     }
-    .awpcp-videos-list-item {
+    .awpcp-videos-grid-item {
         float: left;
         list-style: none;
         margin: 10px;
@@ -622,6 +620,11 @@ p.ad_status_msg {
             display: inline-block;
             padding: 9px;
         }
+    }
+
+    .awpcp-videos-list-item {
+        list-style: none;
+        margin: 10px 0;
     }
 
     .awpcp-attachments {
