Small change in a comment.

--- a/resources/less/messages.less
+++ b/resources/less/messages.less
@@ -27,7 +27,7 @@
 }
 
 // are we overwriting WordPress styles?
-// A: In the admin only .ghost survives applied,
+// A: In the admin only .ghost remains applied,
 //    all other are overwritten by WordPress styles.
 .updated {
     border-color: #E6DB55;
