Add support for multiple templaets to Multiple Region Selector.

--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1406,6 +1406,19 @@ p.ad_status_msg {
 .awpcp-multiple-region-selector .awpcp-region-selector:last-of-type {
   margin-bottom: 0;
 }
+.awpcp-multiple-region-selector-form-table table {
+  border-top: 1px solid #DDD;
+}
+.awpcp-multiple-region-selector-form-table tfoot td {
+  text-align: right;
+}
+.awpcp-multiple-region-selector-form-table .awpcp-region-selector {
+  background: transparent;
+}
+.awpcp-multiple-region-selector-form-table .add-region {
+  margin-left: 0;
+  margin-top: 10px;
+}
 .widget_awpcp_search_widget form label {
   display: block;
   font-size: 13px;
