--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -13,6 +13,7 @@
 @import 'components/listings-widget.less';
 @import 'components/main-menu.less';
 @import 'components/multiple-region-selector.less';
+@import 'components/multiple-region-selector-form-table.less';
 @import 'components/search-listings-widget.less';
 
 @import 'page-place-ad.less';
