--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -1,5 +1,6 @@
 @import 'legacy/frontend.less';
 
+@import 'common/state.less';
 @import 'common.less';
 @import 'colors.less';
 @import 'icons.less';
