--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -16,6 +16,7 @@
 @import 'components/listing-actions.less';
 @import 'components/main-menu.less';
 @import 'components/media-manager.less';
+@import 'components/media-uploader.less';
 @import 'components/thumbnails-generator.less';
 @import 'components/multiple-region-selector.less';
 @import 'components/multiple-region-selector-form-table.less';
